--- a/styles/styles.css
+++ b/styles/styles.css
@@ -317,6 +317,9 @@ body.active2{
     }
     body.active2{
         background-image: url(../assests/images/vertical-love.jpg);
+        background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     }
     .social-links{
         margin: 1rem auto;
